--- a/Source/Client/Web/flightBooking/css/styles.css
+++ b/Source/Client/Web/flightBooking/css/styles.css
@@ -1,16 +1,54 @@
 header,
 section,
-footer,
-article{
+footer
+{
     display: block;
 }
+/*CHANGE*/
+body,html {
+  height: 100%;
+}
 
+body {
+  padding-top: 50px;
+}
+
+header{
+    margin-bottom: 20px;
+}
+.wide {
+  width:100%;
+  height:20%;
+  height:calc(20% - 1px);
+  background-image:url('images/background.jpg');
+  background-size:cover;
+}
+
+.wide img {
+  width:100%;
+}
+
+.logo {
+  color:#fff;
+  font-weight:800;
+  font-size:14pt;
+  padding:25px;
+  text-align:center;
+}
+
+.line {
+  padding-top:20px;
+  white-space:no-wrap;
+  overflow:hidden;
+  text-align:center;
+}
+/*End Change*/
 body {
     color: #666666;
     background-color: #f9f8f6;
     //background-image: url("images/dark-wood.jpg");
     background-position: center;
-    font-family: Georgia, Times, serif;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     line-height: 1.4em;
     margin: 0px;
 }
@@ -22,25 +60,12 @@ body {
 //     background-color: #ffffff;
 // }
 
-// header {
-//     height: 160px;
-//     background-image: url("images/header.jpg");
-// }
-
 h1 {
     text-indent: -9999px;
     width: 940px;
     height: 130px;
     margin: 0px;
 }
-
-// nav,
-// footer {
-//     clear: both;
-//     color: #ffffff;
-//     background-color: #aeaca8;
-//     height: 30px;
-// }
 
 nav ul {
     margin: 0px;
@@ -70,12 +95,6 @@ section.bookyourtrip {
     //border-right: 1px solid #eeeeee;
 }
 
-article {
-    clear: both;
-    overflow: auto;
-    width: 100%;
-}
-
 a {
     color: #de6581;
     text-decoration: none;
@@ -97,16 +116,10 @@ h3 {
     color: #de6581;
 }
 
-
-// footer {
-//     font-size: 80%;
-//     padding: 7px 0px 0px 20px;
-// }
-
 .btn-horizontal {
     background-repeat: no-repeat;
     height: 15px;
-    width: 15px;
+    //width: 15px;
     background-position: center center;
     display: block;
     background-size: contain;
@@ -115,6 +128,10 @@ h3 {
 
 .icon-roundtrip {
     background-image: url("images/icon_arrows.png");
+}
+
+.icon-oneway {
+    background-image: url("images/icon_arrows_oneway.png");
 }
 
 .form-group {
@@ -130,10 +147,10 @@ h3 {
 }
 
 .input-default {
-    height: 50px;
-    width: 400px !important;
+    height: 30px;
+    //max-width: 200px !important;
     background-color: #FFF !important;
-    border: solid #3074C5 2px !important;
+    border: solid #ccc 2px !important;
     padding: 6px 16px;
     font-size: 18px !important;
     font-weight: bold;
@@ -159,6 +176,10 @@ h3 {
     margin: 0px 50px 0px 0px;
 }
 
+.datepicker-checkout{
+    display : none !important;
+}
+
 .people-selection-box{
     padding: 8px 16px 8px 20px !important;
 }
@@ -182,7 +203,7 @@ h3 {
 
 /*Change background color of links on hover*/
 ul.naviga-blue li a:hover, ul.naviga-blue li.active a {
-    background-color: #168fb0;
+    background-color: #337ab7;
     color: #fff;
     text-decoration: none;
     border-color: transparent;
@@ -214,19 +235,183 @@ ul, li {
     list-style: none;
     padding-left: 0;
 }
-//
-//
-//
 
-//-------------------PAGE 02-----------------------------
+.footer-distributed{
+    background-color: #292c2f;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
+    width: 100%;
+    text-align: left;
+    font: bold 16px sans-serif;
+
+    padding: 55px 50px;
+    margin-top: 80px;
+}
+
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right{
+    display: inline-block;
+    vertical-align: top;
+}
+
+/* Footer left */
+
+.footer-distributed .footer-left{
+    width: 40%;
+}
+
+/* The company logo */
+
+.footer-distributed h3{
+    color:  #ffffff;
+    font: normal 36px 'Cookie', cursive;
+    margin: 0;
+}
+
+.footer-distributed h3 span{
+    color:  #5383d3;
+}
+
+/* Footer links */
+
+.footer-distributed .footer-links{
+    color:  #ffffff;
+    margin: 20px 0 12px;
+    padding: 0;
+}
+
+.footer-distributed .footer-links a{
+    display:inline-block;
+    line-height: 1.8;
+    text-decoration: none;
+    color:  inherit;
+}
+
+.footer-distributed .footer-company-name{
+    color:  #8f9296;
+    font-size: 14px;
+    font-weight: normal;
+    margin: 0;
+}
+
+/* Footer Center */
+
+.footer-distributed .footer-center{
+    width: 35%;
+}
+
+.footer-distributed .footer-center i{
+    background-color:  #33383b;
+    color: #ffffff;
+    font-size: 25px;
+    width: 38px;
+    height: 38px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 42px;
+    margin: 10px 15px;
+    vertical-align: middle;
+}
+
+.footer-distributed .footer-center i.fa-envelope{
+    font-size: 17px;
+    line-height: 38px;
+}
+
+.footer-distributed .footer-center p{
+    display: inline-block;
+    color: #ffffff;
+    vertical-align: middle;
+    margin:0;
+}
+
+.footer-distributed .footer-center p span{
+    display:block;
+    font-weight: normal;
+    font-size:14px;
+    line-height:2;
+}
+
+.footer-distributed .footer-center p a{
+    color:  #5383d3;
+    text-decoration: none;;
+}
+
+
+/* Footer Right */
+
+.footer-distributed .footer-right{
+    width: 20%;
+}
+
+.footer-distributed .footer-company-about{
+    line-height: 20px;
+    color:  #92999f;
+    font-size: 13px;
+    font-weight: normal;
+    margin: 0;
+}
+
+.footer-distributed .footer-company-about span{
+    display: block;
+    color:  #ffffff;
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.footer-distributed .footer-icons{
+    margin-top: 25px;
+}
+
+.footer-distributed .footer-icons a{
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    cursor: pointer;
+    background-color:  #33383b;
+    border-radius: 2px;
+
+    font-size: 20px;
+    color: #ffffff;
+    text-align: center;
+    line-height: 35px;
+
+    margin-right: 3px;
+    margin-bottom: 5px;
+}
+
+/* If you don't want the footer to be responsive, remove these media queries */
+
+@media (max-width: 880px) {
+
+    .footer-distributed{
+        font: bold 14px sans-serif;
+    }
+
+    .footer-distributed .footer-left,
+    .footer-distributed .footer-center,
+    .footer-distributed .footer-right{
+        display: block;
+        width: 100%;
+        margin-bottom: 40px;
+        text-align: center;
+    }
+
+    .footer-distributed .footer-center i{
+        margin-left: 0;
+    }
+}
+/*-------------------PAGE 02-----------------------------*/
 .table tr.inforticket:hover{
     background-color: blue;
 }
-.ui-widget-header {
-    background: #fe5815 none repeat scroll 0 0;
-    border: 1px solid #fe5815;
-}
-//-------------------PAGE 03-----------------------------
+// .ui-widget-header {
+//     background: #fe5815 none repeat scroll 0 0;
+//     border: 1px solid #fe5815;
+// }
+/*-------------------PAGE 03-----------------------------*/
 #wrap {
     background: #ffffff none repeat scroll 0 0;
     border-bottom: 0 solid #dddede;
@@ -236,7 +421,7 @@ ul, li {
     font-family: GraublauWeb;
     margin: 0 auto;
     min-height: 489px;
-    padding: 6px 20px 20px;
+    padding: 10px 20px 20px;
     position: relative;
 }
 
@@ -321,7 +506,15 @@ ul, li {
     text-align: center;
     width: 500px;
 }
-//-------------------PAGE 04-----------------------------
 
-//-------------------PAGE 05-----------------------------
+#table-guest td{
+    width: 50%;
+}
+/*-------------------PAGE 04-----------------------------*/
+
+
+
+
+
+
 
