--- a/Source/Client/FlightBooking_Android/app/src/main/res/values/ids.xml
+++ b/Source/Client/FlightBooking_Android/app/src/main/res/values/ids.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <item name="item_click_support" type="id" />
+
+
     <item name="button_ok" type="id" />
     <item name="button_no" type="id" />
     <item name="fab" type="id" />
