--- a/Source/Client/FlightBooking_Android/app/src/main/res/layout/activity_book.xml
+++ b/Source/Client/FlightBooking_Android/app/src/main/res/layout/activity_book.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="flight"
-            type="com.yosta.flightbooking.binding.FlightViewModel" />
+            type="com.yosta.flightbooking.binding.viewmodel.FlightVM" />
     </data>
 
 
