--- a/Source/Client/FlightBooking_Android/app/src/main/res/layout/view_dialog_flight.xml
+++ b/Source/Client/FlightBooking_Android/app/src/main/res/layout/view_dialog_flight.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="flightbooking"
-            type="com.yosta.flightbooking.binding.FlightBookingViewModel" />
+            type="com.yosta.flightbooking.binding.viewmodel.FlightBookingVM" />
 
     </data>
 
