--- a/Source/Client/FlightBooking_Android/app/src/main/res/layout/view_item_grade.xml
+++ b/Source/Client/FlightBooking_Android/app/src/main/res/layout/view_item_grade.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="grade"
-            type="com.yosta.flightbooking.binding.GradeInfoViewModel" />
+            type="com.yosta.flightbooking.binding.viewmodel.GradeInfoVM" />
 
     </data>
 
