--- a/Source/Client/FlightBooking_Android/app/src/main/res/layout/activity_book.xml
+++ b/Source/Client/FlightBooking_Android/app/src/main/res/layout/activity_book.xml
@@ -67,6 +67,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:visibility="gone"
                         android:layout_marginTop="@dimen/margin"
                         android:orientation="horizontal">
 
@@ -124,6 +125,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginTop="@dimen/margin"
+                        android:visibility="gone"
                         android:orientation="horizontal">
 
                         <android.support.v7.widget.AppCompatImageView
